PoeEye/PoeShared.Blazor.Controls/wwwroot/assets/css/main-ant-blazor.css
/* ... */
.ant-table {
    background: transparent;
}

.ant-table-wrapper {
    width: 100%;
}

.ant-table table {
    color: var(--eye-MaterialDesignBody);
}

.ant-form {
    color: var(--eye-MaterialDesignBody);
}

.ant-tabs {
    color: var(--eye-MaterialDesignBody);
    font-size: inherit;
    line-height: inherit;
}

.ant-tabs-top > .ant-tabs-nav::before, .ant-tabs-bottom > .ant-tabs-nav::before, .ant-tabs-top > div > .ant-tabs-nav::before, .ant-tabs-bottom > div > .ant-tabs-nav::before {
    position: absolute;
    right: 0;
    left: 0;
    border-bottom: 1px solid #f0f0f0;
    content: '';
    opacity: 0.25;
}

.ant-form-item {
    color: var(--eye-MaterialDesignBody);
}

.ant-form-item-label>label {
    color: var(--eye-MaterialDesignBody);
}

.ant-table-tbody>tr.ant-table-row:hover>td {
    background: #455871
}

.ant-table-thead th.ant-table-column-has-sorters:hover {
    background: #455871
}

.ant-table-thead th.ant-table-column-has-sorters:hover .ant-table-filter-trigger-container {
    background: #455871
}

.ant-table-thead th.ant-table-column-sort {
    background: #455871
}

td.ant-table-column-sort {
    background: #455871
}

.ant-table-thead>tr>th {
    color: #fff;
    font-weight: bold;
    background: rgba(69, 88, 113, 0.8);
}

.ant-table tfoot>tr>td, .ant-table tfoot>tr>th, .ant-table-tbody>tr>td, .ant-table-thead>tr>th {
    position: relative;
    padding: 8px 8px;
    overflow-wrap: break-word;
}

.ant-table-column-sorters {
    display: inline-flex;
    align-items: center;
    padding: 8px 8px;
}

.ant-drawer-content {
    
}

.ant-btn { 
}

.ant-btn-link {
    padding: 0;
    height: inherit;
}

input,
textarea,
.editor-preview {
    background: var(--bs-body-bg);
    color: inherit;
}

::selection {
    background: #376c9c;
}

.ant-select {
}

.ant-select:not(.ant-select-customize-input) .ant-select-selector {
    background-color: inherit;
    border: 0;
}

.ant-select-multiple.ant-select-disabled.ant-select:not(.ant-select-customize-input) .ant-select-selector {
    background: transparent;
    cursor: inherit;
}

.ant-select-multiple .ant-select-selection-item {
    background-color: rgba(var(--bs-secondary-rgb));
    display: flex;
    align-items: center;
    border: 0;
}

.form-control.ant-select-disabled{
    background-color: transparent;
    border: 0;
}

.ant-select-clear{
    background-color: transparent;
    border: 0;
    color: var(--bs-badge-color);
}

.ant-select-clear:hover {
    color: var(--bs-badge-color);
}


.ant-select-arrow{
    color: var(--bs-badge-color);
}


.ant-select-dropdown{
  
    color: var(--bs-body-color);
    background: var(--bs-body-bg);
    padding: var(--bs-dropdown-padding-y) var(--bs-dropdown-padding-x);
    margin: 0 0 0 -7px; 
    font-size: var(--bs-dropdown-font-size);
    text-align: left;
    list-style: none;
    border: var(--bs-dropdown-border-width) solid var(--bs-dropdown-border-color);
    border-radius: var(--bs-dropdown-border-radius);
    background-color: var(--bs-dropdown-bg);
    background-clip: padding-box;
}

.ant-pagination{
    color: var(--bs-body-color);
}

.ant-select{
    color: var(--bs-body-color);
}

.ant-checkbox-disabled + span{
    color: inherit;
}

.ant-checkbox-wrapper{
    color: inherit;
    display: inline-flex;
}

.ant-pagination-item{
    background: transparent;
    color: var(--bs-body-color);
    border: 0;
}

.ant-pagination-prev .ant-pagination-item-link,
.ant-pagination-next .ant-pagination-item-link {
    background: transparent;
    color: var(--bs-body-color);
    border: 0;
}

.ant-pagination-item-active{
    font-size: 20px;
}

.ant-select-item-option-selected:not(.ant-select-item-option-disabled){
    color: var(--bs-badge-color);
}

.ant-select-item{
    color: var(--bs-badge-color);
}

.ant-select-item-option-selected:not(.ant-select-item-option-disabled){
    background: var(--bs-tertiary-bg);
}

.ant-select-selection-placeholder{
    color: var(--bs-secondary-color);
}

.ant-select-item-option-active:not(.ant-select-item-option-disabled){
    background: var(--bs-tertiary-bg);
}

.ant-select-item {
    margin: 2px 6px 2px 0; 
    margin-block: 2px; 
    margin-inline: 0 6px;
    display: flex;
    align-items: center;
    min-height: 20px;
}

.ant-select-multiple .ant-select-selection-item-remove{
    font-size: 12px;
    margin: 0 4px;
}

.ant-select-multiple .ant-select-selector
{
    padding: 0;
}

.ant-select-multiple .ant-select-selection-placeholder{
    left: 0;
}

.ant-select-single:not(.ant-select-customize-input) .ant-select-selector{
    padding: 0 11px 0 0;
    height: 24px;
}

.ant-select-single:not(.ant-select-customize-input) .ant-select-selector .ant-select-selection-search-input{
    height: 24px;
}

.ant-select-single .ant-select-selector .ant-select-selection-search{
    left: 0;
}

.ant-select-single .ant-select-selector .ant-select-selection-item, .ant-select-single .ant-select-selector .ant-select-selection-placeholder {
    line-height: 24px;
}

.ant-select-multiple .ant-select-selector::after{
    margin: 0;
}

.ant-tree{
    color: var(--eye-SecondaryHueMidForegroundBrush);
    background: inherit;
    overflow-y: auto;
    overflow-x: hidden;
    padding-right: 10px;
    font-size: 1em;
}

.ant-tree-switcher{
    display: flex;
    align-items: center;
    width: inherit;
}

.ant-tree-show-line .ant-tree-switcher {
    background: inherit;
}

.ant-tree .ant-tree-node-content-wrapper{
    width: 100%;
}

.ant-tree .ant-tree-treenode {
    padding: 0;
}

.ant-tree-indent-unit{
    width: 16px;
}

.ant-tree .ant-tree-node-content-wrapper.ant-tree-node-selected{
    color: var(--eye-SecondaryHueMidForegroundBrush);
    text-decoration: none;
    background-color: #1171BC60;
}

.ant-tree .ant-tree-node-content-wrapper:not(.ant-tree-node-content-wrapper.ant-tree-node-selected):hover{
    background-color: #1171BC90;
}

.ant-collapse{
    color: inherit;
    background: inherit;
    border: 0;
}
/* ... */

